rewrited index.css

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-family: Montserrat;
 }
 
+html, body {
+  min-height: 100%;
+}
+
 body {
   background: #ff5f6d; /* fallback for old browsers */
   background: -webkit-linear-gradient(
